# BrainFuckCompiler

./: CMakeLists.txt  README.md
include/: compile.hpp  grammar_check.hpp  platform_linux_amd64.hpp  strip_source.hpp  translate.hpp
src/: compile.cpp  grammar_check.cpp  main.cpp  platform_linux_amd64.cpp  strip_source.cpp  translate.cpp
